--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 # next.js
 /.next/
 /out/
+.history
+.env
 
 # production
 /build
@@ -27,6 +29,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
